tests/parser/valid/variables.src
fn test() -> int {
    int a;
    int b = 5;
    float c = 3.14;
    bool d = true;
    bool e = false;
    return 0;
}
