tests/parser/invalid/invalid_var_name.src
fn test() -> int {
    int 123abc = 5;
    return 0;
}
